--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>API</module>
         <module>v1_12_R1</module>
         <module>v1_11_R1</module>
+        <module>v1_10_R1</module>
         <module>Plugin</module>
     </modules>
 
