--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -49,6 +49,22 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.novamaday.novalib.nms</groupId>
+            <artifactId>v1_9_R1</artifactId>
+            <version>v1_9_R1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.novamaday.novalib.nms</groupId>
+            <artifactId>v1_9_R2</artifactId>
+            <version>v1_9_R2</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
 
         <!--Latest Bukkit release to build upon-->
         <dependency>
