--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>v1_12_R1</module>
         <module>v1_11_R1</module>
         <module>v1_10_R1</module>
+        <module>v1_9_R2</module>
+        <module>v1_9_R1</module>
         <module>Plugin</module>
     </modules>
 
