--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <module>v1_10_R1</module>
         <module>v1_9_R2</module>
         <module>v1_9_R1</module>
+        <module>v1_8_R3</module>
+        <module>v1_8_R2</module>
+        <module>v1_8_R1</module>
         <module>Plugin</module>
     </modules>
 
