--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>v1_8_R3</module>
         <module>v1_8_R2</module>
         <module>v1_8_R1</module>
+        <module>v1_7_R4</module>
         <module>Plugin</module>
     </modules>
 
