--- a/API/pom.xml
+++ b/API/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>com.novamaday.novalib</groupId>
         <artifactId>NovaLib</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>API</artifactId>
-    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
