--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -7,18 +7,17 @@
     <parent>
         <groupId>com.novamaday.novalib</groupId>
         <artifactId>NovaLib</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>Plugin</artifactId>
-    <version>1.0.0</version>
 
     <dependencies>
         <!--Depend on our own API of course!!-->
         <dependency>
             <groupId>com.novamaday.novalib</groupId>
             <artifactId>API</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
             <optional>true</optional>
