--- a/v1_12_R1/pom.xml
+++ b/v1_12_R1/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.novamaday.novalib</groupId>
         <artifactId>NovaLib</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.novamaday.novalib.nms</groupId>
@@ -28,8 +28,21 @@
         <dependency>
             <groupId>com.novamaday.novalib</groupId>
             <artifactId>API</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
