--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <!--Private Repo for CB Builds-->
         <repository>
             <id>maven-private</id>
-            <url>https://repo.novamaday.com/repository/maven-private/</url>
+            <url>http://repo.novafox161.com/repository/maven-private/</url>
         </repository>
     </repositories>
 
