More work on the Server CrossTalk system.
Some more still needs to be done, but this is pretty good so far.

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
     </distributionManagement>
 
     <repositories>
+        <!--Maven Central-->
+        <repository>
+            <id>central</id>
+            <url>http://central.maven.org/maven2/</url>
+        </repository>
         <!--Bukkit Repo-->
         <repository>
             <id>bukkit-repo</id>
