--- a/API/pom.xml
+++ b/API/pom.xml
@@ -13,11 +13,26 @@
     <artifactId>API</artifactId>
 
     <dependencies>
+        <!--Latest CB to compile against-->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>1.12.2</version>
             <scope>provided</scope>
+        </dependency>
+        <!--Netty API-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--JSON API-->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
