Remove netty because I don't need it.

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -16,16 +16,9 @@
         <!--Latest CB to compile against-->
         <dependency>
             <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.12.2</version>
+            <artifactId>bukkit</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-        <!--Netty API-->
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.25.Final</version>
-            <scope>compile</scope>
         </dependency>
         <!--JSON API-->
         <dependency>
