Trying this again. Why won't jenkins just build it. It keeps hanging.

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>API</artifactId>
 
     <dependencies>
-        <!--Latest CB to compile against-->
+        <!--Latest Bukkit version to compile against-->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
