--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>v1_8_R1</module>
         <module>v1_7_R4</module>
         <module>Plugin-Bukkit</module>
+        <module>Plugin-Bungee</module>
     </modules>
 
     <distributionManagement>
