--- a/Plugin-Bukkit/src/main/resources/plugin.yml
+++ b/Plugin-Bukkit/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: NovaLib
 version: ${project.version}
-description: An advanced API and Library for all of my plugins and more.
-author: Shades161 (NovaFox161)
-website: http://www.novamaday.com/plugins/novalib
+description: An advanced API and Library for our plugins and so much more!
+author: DreamExposure
+authors: [NovaFox161]
+website: https://www.novamaday.com/plugins/novalib
 
 softdepend: [Vault, PerWorldChatPlus]
 
