--- a/Plugin-Bukkit/pom.xml
+++ b/Plugin-Bukkit/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <parent>
         <groupId>com.novamaday.novalib</groupId>
         <artifactId>NovaLib</artifactId>
@@ -11,6 +16,7 @@
     </parent>
 
     <artifactId>Plugin-Bukkit</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!--Depend on our own API of course!!-->
