--- a/API/pom.xml
+++ b/API/pom.xml
@@ -7,6 +7,9 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
     </properties>
 
     <parent>
@@ -56,7 +59,6 @@
     </dependencies>
 
     <build>
-        <directory>../target</directory> <!-- Build it one level up, because it is the one we care about -->
         <finalName>NovaLib-API</finalName>
         <!-- Define filtering for the inclusion of plugin.yml, so we can utilize the pom.xml version in it -->
         <resources>
