--- a/API/pom.xml
+++ b/API/pom.xml
@@ -56,6 +56,18 @@
             <scope>compile</scope>
             <optional>false</optional>
         </dependency>
+        <!--Apache HTTP Client API-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+        <!--OkHTTP API-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
