--- a/v1_13_R1/pom.xml
+++ b/v1_13_R1/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.13-pre7</version>
+            <version>1.13</version>
             <type>jar</type>
             <optional>true</optional>
             <scope>provided</scope>
