--- a/API/pom.xml
+++ b/API/pom.xml
@@ -40,6 +40,7 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+        <!--BungeeCord javadoc-->
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
