--- a/API/pom.xml
+++ b/API/pom.xml
@@ -65,6 +65,14 @@
             <scope>compile</scope>
             <optional>false</optional>
         </dependency>
+        <!--Lettuce API for Redis-->
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>5.1.2.RELEASE</version>
+            <scope>compile</scope>
+            <optional>false</optional>
+        </dependency>
     </dependencies>
 
     <build>
