--- a/Plugin-Bukkit/pom.xml
+++ b/Plugin-Bukkit/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.dreamexposure.novalib</groupId>
         <artifactId>NovaLib</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>Plugin-Bukkit</artifactId>
@@ -26,12 +26,20 @@
         <dependency>
             <groupId>org.dreamexposure.novalib</groupId>
             <artifactId>API</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.1.0-SNAPSHOT</version>
             <scope>compile</scope>
             <optional>false</optional>
         </dependency>
 
         <!--All supported MC versions get built into our plugin-->
+        <dependency>
+            <groupId>org.dreamexposure.novalib.nms</groupId>
+            <artifactId>v1_14_R1</artifactId>
+            <version>v1_14_R1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.dreamexposure.novalib.nms</groupId>
             <artifactId>v1_13_R2</artifactId>
