--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
 
     <groupId>org.dreamexposure.novalib</groupId>
     <artifactId>NovaLib</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <modules>
         <module>API</module>
+        <module>v1_14_R1</module>
         <module>v1_13_R2</module>
         <module>v1_13_R1</module>
         <module>v1_12_R1</module>
