Add Hikari connection pooling, fix inventory serialization

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -73,6 +73,14 @@
             <scope>compile</scope>
             <optional>false</optional>
         </dependency>
+        <!--Connection pooling-->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+            <optional>false</optional>
+        </dependency>
     </dependencies>
 
     <build>
