--- a/v1_13_R2/pom.xml
+++ b/v1_13_R2/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
-            <version>1.13.1</version>
+            <version>1.13.1-R0.1-SNAPSHOT</version>
             <type>jar</type>
             <optional>true</optional>
             <scope>provided</scope>
