--- a/v1_13_R1/pom.xml
+++ b/v1_13_R1/pom.xml
@@ -32,6 +32,12 @@
             <type>jar</type>
             <optional>true</optional>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>bukkit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--DEPEND ON THE API-->
         <dependency>
