--- a/v1_7_R4/pom.xml
+++ b/v1_7_R4/pom.xml
@@ -38,6 +38,10 @@
                     <groupId>org.spigotmc</groupId>
                     <artifactId>minecraft-server</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>minecraft-server</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <!--DEPEND ON THE API-->
