--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
-    </properties>
 
-    <parent>
-        <groupId>org.dreamexposure</groupId>
-        <artifactId>DreamExposure-Parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+        <maven.plugin.deploy.version>3.0.0-M1</maven.plugin.deploy.version>
+        <maven.plugin.compiler.version>3.8.1</maven.plugin.compiler.version>
+        <maven.plugin.shade.version>3.2.4</maven.plugin.shade.version>
+        <maven.plugin.jar.version>3.2.0</maven.plugin.jar.version>
+        <maven.plugin.exec.version>3.0.0</maven.plugin.exec.version>
+    </properties>
 
     <groupId>org.dreamexposure.novalib</groupId>
     <artifactId>NovaLib</artifactId>
