--- a/Plugin-Bungee/pom.xml
+++ b/Plugin-Bungee/pom.xml
@@ -4,18 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
-    </properties>
-
     <parent>
         <groupId>org.dreamexposure.novalib</groupId>
         <artifactId>NovaLib</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>Plugin-Bungee</artifactId>
@@ -26,7 +18,7 @@
         <dependency>
             <groupId>org.dreamexposure.novalib</groupId>
             <artifactId>API</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>compile</scope>
             <optional>false</optional>
         </dependency>
