--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,17 @@
     <packaging>pom</packaging>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <!--Project settings-->
+        <revision>1.1.0-SNAPSHOT</revision>
+
+        <!--Compiler Options-->
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
 
+        <!--Plugin versions-->
         <maven.plugin.deploy.version>3.0.0-M1</maven.plugin.deploy.version>
         <maven.plugin.compiler.version>3.8.1</maven.plugin.compiler.version>
         <maven.plugin.shade.version>3.2.4</maven.plugin.shade.version>
@@ -22,7 +27,7 @@
 
     <groupId>org.dreamexposure.novalib</groupId>
     <artifactId>NovaLib</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <modules>
         <module>API</module>
@@ -89,8 +94,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.plugin.compiler.version}</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
             <plugin>
