--- a/v1_13_R1/pom.xml
+++ b/v1_13_R1/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.dreamexposure.novalib.nms</groupId>
     <artifactId>v1_13_R1</artifactId>
-    <version>v1_13_R1</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.dreamexposure.novalib</groupId>
             <artifactId>API</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${revision}</version>
             <type>jar</type>
         </dependency>
     </dependencies>
