--- a/v1_7_R4/pom.xml
+++ b/v1_7_R4/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.dreamexposure.novalib.nms</groupId>
     <artifactId>v1_7_R4</artifactId>
-    <version>v1_7_R4</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.dreamexposure.novalib</groupId>
             <artifactId>API</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>${revision}</version>
             <type>jar</type>
         </dependency>
     </dependencies>
