Support MC 1.16.x (nms only)
Compat files still need updating (same as last commit)

--- a/Plugin-Bukkit/pom.xml
+++ b/Plugin-Bukkit/pom.xml
@@ -26,6 +26,30 @@
         <!--All supported MC versions get built into our plugin-->
         <dependency>
             <groupId>org.dreamexposure.novalib.nms</groupId>
+            <artifactId>v1_16_R3</artifactId>
+            <version>${revision}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.dreamexposure.novalib.nms</groupId>
+            <artifactId>v1_16_R2</artifactId>
+            <version>${revision}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.dreamexposure.novalib.nms</groupId>
+            <artifactId>v1_16_R1</artifactId>
+            <version>${revision}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.dreamexposure.novalib.nms</groupId>
             <artifactId>v1_15_R1</artifactId>
             <version>${revision}</version>
             <type>jar</type>
