--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
 
     <modules>
         <module>API</module>
+        <module>v1_16_R3</module>
+        <module>v1_16_R2</module>
+        <module>v1_16_R1</module>
         <module>v1_15_R1</module>
         <module>v1_14_R1</module>
         <module>v1_13_R2</module>
