Support MC 1.17.x (nms only)
Also fix packaging for v1_16_R3 module

Compat files still need updating (same as last commit)

--- a/Plugin-Bukkit/pom.xml
+++ b/Plugin-Bukkit/pom.xml
@@ -26,6 +26,11 @@
         <!--All supported MC versions get built into our plugin-->
         <dependency>
             <groupId>org.dreamexposure.novalib.nms</groupId>
+            <artifactId>v1_17_R1</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.dreamexposure.novalib.nms</groupId>
             <artifactId>v1_16_R3</artifactId>
             <version>${revision}</version>
             <type>jar</type>
