--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
     <modules>
         <module>API</module>
+        <module>v1_17_R1</module>
         <module>v1_16_R3</module>
         <module>v1_16_R2</module>
         <module>v1_16_R1</module>
