Build against spigot 1.17.1

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -14,13 +14,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!--Latest Bukkit version to compile against-->
+        <!--Latest Spigot version to compile against-->
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-            <type>jar</type>
             <optional>true</optional>
         </dependency>
         <!--Latest BungeeCord version to compile against-->
